--- a/game-client/src/components/GuessTitleByLyric.css
+++ b/game-client/src/components/GuessTitleByLyric.css
@@ -7,6 +7,19 @@
     --darkgreenblack: #000f08;
     --green: #539987;
 }
+
+#button {
+    background-color: #4c90af;
+    border-radius:1-px;
+    color: white;
+    padding: 5px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
+
+}
 /* 
 body {
    background-color: orangered;
