--- a/game-client/src/components/EndGame.css
+++ b/game-client/src/components/EndGame.css
@@ -1,6 +1,6 @@
 #button {
     background-color: #4c90af;
-    border-radius:1-px;
+    border-radius:7px;
     color: white;
     padding: 5px 32px;
     text-align: center;
