--- a/game-client/src/components/GuessTitleByLyric.css
+++ b/game-client/src/components/GuessTitleByLyric.css
@@ -1,16 +1,9 @@
 
-:root {
-    --mintcream: #f4fff8;
-    --darkliver: #4d4847;
-    --outerspacecrayola: #1c3738;
-    --pewterblue: #8baaad;
-    --darkgreenblack: #000f08;
-    --green: #539987;
-}
+
 
 #button {
     background-color: #4c90af;
-    border-radius:1-px;
+    border-radius:7px;
     color: white;
     padding: 5px 32px;
     text-align: center;
@@ -20,15 +13,16 @@
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
 
 }
-/* 
-body {
-   background-color: orangered;
-} */
+
+#lyricbox {
+    margin: 20px;
+    max-width: 100%;
+}
+
 
 #background {
-    background-color: orangered;
+    background-color: rgb(216, 85, 62)
 }
-/* 
-#answer {
-    background-color: rebeccapurple;
-} */
+#button {
+    margin: 20px
+}
