--- a/game-client/src/components/Login.css
+++ b/game-client/src/components/Login.css
@@ -1,6 +1,6 @@
 #button {
     background-color: #4c90af;
-    border-radius:1-px;
+    border-radius:7px;
     color: white;
     padding: 5px 32px;
     text-align: center;
@@ -8,4 +8,15 @@
     display: inline-block;
     font-size: 20px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+
+#loginBox {
+    margin: 20px;
+    max-width: 100%;
+    padding: 10px;
+}
+
+#notused {
+    background-color: rgb(216, 85, 62);
 }
