--- a/game-client/src/components/Signup.css
+++ b/game-client/src/components/Signup.css
@@ -1,6 +1,6 @@
 #button {
     background-color: #4c90af;
-    border-radius:1-px;
+    border-radius:7px;
     color: white;
     padding: 5px 32px;
     text-align: center;
@@ -13,5 +13,5 @@
 
 
 #background {
-    background-color: orangered;
+    background-color: rgb(216, 85, 62);
 }
